<resources>
    <string name="app_name">Family Map</string>
    <string name="textview">TextView</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="ServerHost">Server Host</string>
    <string name="ServerPort">Server Port</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="Gender">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapFragmentMessage">Click on a marker to see event details</string>
    <string name="fileMenu">File</string>
    <string name="fileMenuSelectedMessage">You selected the file asdf</string>
    <string name="personMenu">File</string>
    <string name="personMenuSelectedMessage">You selected the person asdf</string>
    <string name="eventsTitle">Life Events</string>
    <string name="personTitle">Family</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>